--- a/app/src/main/res/layout/content_reminders.xml
+++ b/app/src/main/res/layout/content_reminders.xml
@@ -8,12 +8,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/dark_grey"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.apress.gerber.reminders.RemindersActivity"
     tools:showIn="@layout/activity_reminders">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/reminders_list_View"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        tools:listitem="@layout/reminders_row"/>
 </RelativeLayout>
