--- a/app/src/main/res/menu/menu_reminders.xml
+++ b/app/src/main/res/menu/menu_reminders.xml
@@ -7,4 +7,18 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item android:id="@+id/action_new"
+        android:title="new Reminder"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        />
+
+    <item android:id = "@+id/action_exit"
+    android:title ="Exit"
+    android:orderInCategory="200"
+    app:showAsAction="never"
+
+    />
+
 </menu>
