--- a/app/src/main/res/layout/activity_reminders.xml
+++ b/app/src/main/res/layout/activity_reminders.xml
@@ -21,7 +21,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_reminders" />
+    <include layout="@layout/content_reminders"
+
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
